# xmem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dev.cmake  notes.md
.github/workflows/: bench.yml  build.yml  unit-test.yml
benchmark/: CMakeLists.txt  b-shared_ptr-std.cpp  b-shared_ptr-xmem-local.cpp  b-shared_ptr-xmem.cpp  b-shared_ptr.inl  b-unique_ptr-std.cpp  b-unique_ptr-xmem.cpp  b-unique_ptr.inl  picobench-main.cpp
cmake/: get_cpm.cmake
code/xmem/: allocator.hpp  allocator_rebind.hpp  atomic_control_block.hpp  atomic_ref_count.hpp  atomic_shared_ptr_storage.hpp  basic_atomic_shared_ptr_storage.hpp  basic_shared_from.hpp  basic_shared_ptr.hpp  basic_weak_ptr.hpp  cb_ptr_pair.hpp  common_control_block.hpp  default_delete.hpp  local_control_block.hpp  local_ref_count.hpp  local_shared_ptr.hpp  ostream.hpp  shared_ptr.hpp  std_helpers.hpp  unique_ptr.hpp
code/xmem/bits/: spinlock.hpp
example/: CMakeLists.txt  e-local_shared_ptr-cppref.cpp  e-shared_ptr-cppref.cpp  e-shared_ptr-leak.cpp  e-unique_ptr-cppref.cpp
scratch/: CMakeLists.txt
test/: CMakeLists.txt  t-allocator.cpp  t-allocator_std_compat.cpp  t-atomic_ref_count.cpp  t-local_ref_count.cpp  t-local_shared_ptr.cpp  t-sanity_std_shared_ptr.cpp  t-sanity_std_unique_ptr.cpp  t-shared_ptr.cpp  t-shared_ptr_bookkeeping.cpp  t-shared_ptr_mt_bk.cpp  t-unique_ptr.cpp  test_ref_count.inl
test-helper/xmem/: test-shared_ptr-atomic.inl  test-shared_ptr-basic.inl  test-shared_ptr-local.inl  test-unique_ptr.inl  test-weak_ptr-atomic.inl  test-weak_ptr-shared_from-basic.inl  test-weak_ptr-shared_from-local.inl  test_init.inl  test_types.hpp
